SERVER-41196 Integrate 'invalidate' tokens into change stream's standard resume logic

(cherry picked from commit 7e4423b458fcefd37a62ebecf168716166b7dc4c)